{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 54,
  "lineage": "4dabdc53-a42c-370f-7268-3e2c9577e5bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cartwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:internet-gateway/igw-0f05004622f2810ce",
            "id": "igw-0f05004622f2810ce",
            "owner_id": "732778637529",
            "region": "eu-north-1",
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            },
            "vpc_id": "vpc-0eedcac5ac57ea171"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "igw-0f05004622f2810ce",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.cartwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cartwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:route-table/rtb-0a309b42d2c366aea",
            "id": "rtb-0a309b42d2c366aea",
            "owner_id": "732778637529",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f05004622f2810ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eedcac5ac57ea171"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "rtb-0a309b42d2c366aea",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.cartwatch",
            "aws_vpc.cartwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:security-group/sg-0084c49fdc2f24292",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0084c49fdc2f24292",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cartwatch-rds-sg",
            "name_prefix": "",
            "owner_id": "732778637529",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eedcac5ac57ea171"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "sg-0084c49fdc2f24292",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.cartwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cartwatch_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:subnet/subnet-027a0f7f1fba363c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027a0f7f1fba363c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732778637529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            },
            "vpc_id": "vpc-0eedcac5ac57ea171"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "subnet-027a0f7f1fba363c6",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.cartwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cartwatch_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:subnet/subnet-0b4a35e2afa9d2c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4a35e2afa9d2c93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732778637529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            },
            "vpc_id": "vpc-0eedcac5ac57ea171"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "subnet-0b4a35e2afa9d2c93",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.cartwatch"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cartwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:732778637529:vpc/vpc-0eedcac5ac57ea171",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d84ce61e76bfda53",
            "default_route_table_id": "rtb-0ec67a992693078ae",
            "default_security_group_id": "sg-01a1824552f217b0e",
            "dhcp_options_id": "dopt-039307bba50975053",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eedcac5ac57ea171",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec67a992693078ae",
            "owner_id": "732778637529",
            "region": "eu-north-1",
            "tags": {
              "Project": "cartwatch"
            },
            "tags_all": {
              "Project": "cartwatch"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "732778637529",
            "id": "vpc-0eedcac5ac57ea171",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}